# youtubecollector

./: .buildconfig  .gitignore  README.md  Song.geany  com.liyaowhen.Song.json  com.liyaowhen.YoutubeCollector.json  meson.build  run.sh
data/: com.liyaowhen.Song.desktop.in  com.liyaowhen.Song.gschema.xml  com.liyaowhen.Song.metainfo.xml.in  com.liyaowhen.Song.playlists.gschema.xml  com.liyaowhen.YoutubeCollector.desktop.in  com.liyaowhen.YoutubeCollector.gschema.xml  com.liyaowhen.YoutubeCollector.metainfo.xml.in  com.liyaowhen.YoutubeCollector.playlists.gschema.xml  gschemas.compiled  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  background.vala  json_config.vala  main.vala  meson.build  playlist_object.vala  song.gresource.xml  style.css  window.ui  window.vala  youtubecollector.gresource.xml
src/controllers/: song_controller.vala
src/music/: new_music_popover.vala
src/scripts/: bkg.config.json  bun.lockb  package-lock.json  package.json  search.mjs
src/widgets/: main_view.vala  music_list_row.vala  new_playlist_popover.vala  playlist.vala  side_bar.vala  song_controls.vala  yt_search.vala
